--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergency & Mystical Light App</title>
+    <title>Aurora Alert</title>
     <style>
         body, html {
             margin: 0;
@@ -13,11 +13,13 @@
             overflow: hidden;
         }
         .container {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100%;
         }
         button {
             padding: 15px;
@@ -25,12 +27,19 @@
             font-size: 18px;
             cursor: pointer;
         }
+        input[type="range"] {
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <button onclick="startEmergencyMode()">Emergency Mode</button>
         <button onclick="startMysticalMode()">Mystical Mode</button>
+        <button onclick="pauseEffect()">Pause</button>
+        <label for="colorTemp">Color Temperature</label>
+        <input type="range" id="colorTemp" min="2000" max="8000" step="100" onchange="changeColorTemperature()">
+        <button onclick="startReadingMode()">Reading Mode</button>
     </div>
 
     <script>
@@ -62,6 +71,29 @@
             document.body.style.transition = 'background-color 2s ease';
             document.body.style.backgroundColor = randomColor;
             intervalId = setTimeout(changeToMystical, 2000); // Change color every 2 seconds
+        }
+
+        function pauseEffect() {
+            clearInterval(intervalId);
+        }
+
+        function changeColorTemperature() {
+            const colorTemp = document.getElementById('colorTemp').value;
+            let color;
+            if (colorTemp <= 3000) {
+                color = `rgb(255, ${Math.floor(140 + (colorTemp - 2000) / 1000 * 115)}, 100)`;
+            } else if (colorTemp <= 5000) {
+                color = `rgb(255, 240, ${Math.floor(255 - (colorTemp - 3000) / 2000 * 155)})`;
+            } else {
+                color = `rgb(${Math.floor(255 - (colorTemp - 5000) / 3000 * 55)}, 255, 255)`;
+            }
+            document.body.style.backgroundColor = color;
+        }
+
+        function startReadingMode() {
+            clearInterval(intervalId);
+            document.body.style.transition = 'background-color 1s ease';
+            document.body.style.backgroundColor = 'rgba(255, 244, 229, 1)'; // Warm light for reading
         }
     </script>
 </body>
