--- a/index.html
+++ b/index.html
@@ -11,24 +11,76 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            background-color: #f0f0f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: background-color 0.5s ease;
         }
         .container {
             position: absolute;
-            top: 20%;
+            top: 10%;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
             flex-direction: column;
             align-items: center;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 20px;
+            padding: 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
         button {
-            padding: 15px;
+            padding: 12px 20px;
             margin: 10px;
-            font-size: 18px;
+            font-size: 16px;
+            border: none;
+            border-radius: 10px;
             cursor: pointer;
+            background: #007aff;
+            color: white;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #005bb5;
         }
         input[type="range"] {
             margin: 20px;
+            -webkit-appearance: none;
+            width: 80%;
+            height: 6px;
+            background: #d3d3d3;
+            border-radius: 5px;
+            outline: none;
+            opacity: 0.8;
+            transition: opacity .15s ease-in-out;
+        }
+        input[type="range"]:hover {
+            opacity: 1;
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            background: #007aff;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+        label {
+            font-weight: 500;
+            color: #333;
+        }
+        #colorPicker {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            margin: 20px;
+            cursor: crosshair;
+            background: conic-gradient(
+                red, yellow, lime, cyan, blue, magenta, red
+            );
         }
     </style>
 </head>
@@ -40,6 +92,7 @@
         <label for="colorTemp">Color Temperature</label>
         <input type="range" id="colorTemp" min="2000" max="8000" step="100" onchange="changeColorTemperature()">
         <button onclick="startReadingMode()">Reading Mode</button>
+        <div id="colorPicker" onmousemove="changeColorByPicker(event)"></div>
     </div>
 
     <script>
@@ -94,6 +147,17 @@
             clearInterval(intervalId);
             document.body.style.transition = 'background-color 1s ease';
             document.body.style.backgroundColor = 'rgba(255, 244, 229, 1)'; // Warm light for reading
+        }
+
+        function changeColorByPicker(event) {
+            const picker = document.getElementById('colorPicker');
+            const rect = picker.getBoundingClientRect();
+            const x = event.clientX - rect.left;
+            const y = event.clientY - rect.top;
+            const ctx = picker.getContext('2d');
+            const imgData = ctx.getImageData(x, y, 1, 1).data;
+            const color = `rgb(${imgData[0]}, ${imgData[1]}, ${imgData[2]})`;
+            document.body.style.backgroundColor = color;
         }
     </script>
 </body>
