--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
             background: conic-gradient(
                 red, yellow, lime, cyan, blue, magenta, red
             );
+            position: relative;
+        }
+        canvas {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
     </style>
 </head>
@@ -92,7 +101,9 @@
         <label for="colorTemp">Color Temperature</label>
         <input type="range" id="colorTemp" min="2000" max="8000" step="100" onchange="changeColorTemperature()">
         <button onclick="startReadingMode()">Reading Mode</button>
-        <div id="colorPicker" onmousemove="changeColorByPicker(event)"></div>
+        <div id="colorPicker">
+            <canvas id="colorCanvas"></canvas>
+        </div>
     </div>
 
     <script>
@@ -149,15 +160,40 @@
             document.body.style.backgroundColor = 'rgba(255, 244, 229, 1)'; // Warm light for reading
         }
 
+        function drawColorWheel() {
+            const canvas = document.getElementById('colorCanvas');
+            const ctx = canvas.getContext('2d');
+            const radius = canvas.width / 2;
+            const image = ctx.createImageData(canvas.width, canvas.height);
+
+            for (let y = -radius; y < radius; y++) {
+                for (let x = -radius; x < radius; x++) {
+                    const distance = Math.sqrt(x * x + y * y);
+                    if (distance <= radius) {
+                        const angle = Math.atan2(y, x) + Math.PI;
+                        const hue = angle * 180 / Math.PI;
+                        const saturation = distance / radius * 100;
+                        ctx.fillStyle = `hsl(${hue}, ${saturation}%, 50%)`;
+                        ctx.fillRect(x + radius, y + radius, 1, 1);
+                    }
+                }
+            }
+        }
+
         function changeColorByPicker(event) {
-            const picker = document.getElementById('colorPicker');
-            const rect = picker.getBoundingClientRect();
+            const canvas = document.getElementById('colorCanvas');
+            const rect = canvas.getBoundingClientRect();
             const x = event.clientX - rect.left;
             const y = event.clientY - rect.top;
-            const ctx = picker.getContext('2d');
+            const ctx = canvas.getContext('2d');
             const imgData = ctx.getImageData(x, y, 1, 1).data;
             const color = `rgb(${imgData[0]}, ${imgData[1]}, ${imgData[2]})`;
             document.body.style.backgroundColor = color;
+        }
+
+        window.onload = function () {
+            drawColorWheel();
+            document.getElementById('colorCanvas').addEventListener('mousemove', changeColorByPicker);
         }
     </script>
 </body>
