--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
             border-radius: 20px;
             padding: 20px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            max-height: 80%;
+            overflow-y: auto;
+        }
+        .collapsible {
+            padding: 12px 20px;
+            margin: 10px;
+            font-size: 16px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            background: #007aff;
+            color: white;
+            transition: background 0.3s;
+        }
+        .collapsible:hover {
+            background: #005bb5;
+        }
+        .content {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
         }
         button {
             padding: 12px 20px;
@@ -72,31 +94,58 @@
             font-weight: 500;
             color: #333;
         }
-        #colorPicker {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
+        .color-palette {
+            display: flex;
+            flex-wrap: wrap;
+            width: 200px;
             margin: 20px;
-            cursor: crosshair;
-            position: relative;
+        }
+        .color-box {
+            width: 40px;
+            height: 40px;
+            margin: 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <button onclick="startEmergencyMode()">Emergency Mode</button>
-        <button onclick="startMysticalMode()">Mystical Mode</button>
-        <button onclick="pauseEffect()">Pause</button>
-        <label for="colorTemp">Color Temperature</label>
-        <input type="range" id="colorTemp" min="2000" max="8000" step="100" onchange="changeColorTemperature()">
-        <button onclick="startReadingMode()">Reading Mode</button>
-        <div id="colorPicker">
-            <canvas id="colorCanvas" width="250" height="250"></canvas>
+        <button class="collapsible" onclick="toggleControlPanel()">Show/Hide Controls</button>
+        <div class="content" id="controlPanel">
+            <button onclick="startEmergencyMode()">Emergency Mode</button>
+            <button onclick="startMysticalMode()">Mystical Mode</button>
+            <button onclick="pauseEffect()">Pause</button>
+            <label for="colorTemp">Color Temperature</label>
+            <input type="range" id="colorTemp" min="2000" max="8000" step="100" onchange="changeColorTemperature()">
+            <button onclick="startReadingMode()">Reading Mode</button>
+            <div class="color-palette" id="colorPalette">
+                <div class="color-box" style="background: #ff0000;" onclick="changeBackgroundColor('#ff0000')"></div>
+                <div class="color-box" style="background: #ff8000;" onclick="changeBackgroundColor('#ff8000')"></div>
+                <div class="color-box" style="background: #ffff00;" onclick="changeBackgroundColor('#ffff00')"></div>
+                <div class="color-box" style="background: #80ff00;" onclick="changeBackgroundColor('#80ff00')"></div>
+                <div class="color-box" style="background: #00ff80;" onclick="changeBackgroundColor('#00ff80')"></div>
+                <div class="color-box" style="background: #00ffff;" onclick="changeBackgroundColor('#00ffff')"></div>
+                <div class="color-box" style="background: #0080ff;" onclick="changeBackgroundColor('#0080ff')"></div>
+                <div class="color-box" style="background: #8000ff;" onclick="changeBackgroundColor('#8000ff')"></div>
+                <div class="color-box" style="background: #ff00ff;" onclick="changeBackgroundColor('#ff00ff')"></div>
+                <div class="color-box" style="background: #ff0080;" onclick="changeBackgroundColor('#ff0080')"></div>
+            </div>
         </div>
     </div>
 
     <script>
         let intervalId;
+
+        function toggleControlPanel() {
+            const controlPanel = document.getElementById('controlPanel');
+            if (controlPanel.style.display === 'flex') {
+                controlPanel.style.display = 'none';
+            } else {
+                controlPanel.style.display = 'flex';
+            }
+        }
 
         function startEmergencyMode() {
             clearInterval(intervalId);
@@ -149,42 +198,8 @@
             document.body.style.backgroundColor = 'rgba(255, 244, 229, 1)'; // Warm light for reading
         }
 
-        function drawColorWheel() {
-            const canvas = document.getElementById('colorCanvas');
-            const ctx = canvas.getContext('2d');
-            const radius = canvas.width / 2;
-
-            for (let y = -radius; y < radius; y++) {
-                for (let x = -radius; x < radius; x++) {
-                    const distance = Math.sqrt(x * x + y * y);
-                    if (distance <= radius) {
-                        const angle = Math.atan2(y, x) + Math.PI;
-                        const hue = angle * 180 / Math.PI;
-                        const saturation = (distance / radius) * 100;
-                        ctx.fillStyle = `hsl(${hue}, ${saturation}%, 50%)`;
-                        ctx.fillRect(x + radius, y + radius, 1, 1);
-                    }
-                }
-            }
-        }
-
-        function changeColorByPicker(event) {
-            const canvas = document.getElementById('colorCanvas');
-            const rect = canvas.getBoundingClientRect();
-            const x = event.clientX - rect.left;
-            const y = event.clientY - rect.top;
-            const ctx = canvas.getContext('2d');
-            const imgData = ctx.getImageData(x, y, 1, 1).data;
-
-            if (imgData[3] !== 0) { // Ensure it's not a transparent pixel
-                const color = `rgb(${imgData[0]}, ${imgData[1]}, ${imgData[2]})`;
-                document.body.style.backgroundColor = color;
-            }
-        }
-
-        window.onload = function () {
-            drawColorWheel();
-            document.getElementById('colorCanvas').addEventListener('mousemove', changeColorByPicker);
+        function changeBackgroundColor(color) {
+            document.body.style.backgroundColor = color;
         }
     </script>
 </body>
